<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Market Bookmark</string>
    <string name="button_add_bookmark">Add to bookmark</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_copy_url">Copy</string>
    <string name="button_edit_bookmark">Edit bookmark</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
    <string name="button_market">Google\nPlay</string>
    <string name="button_ok">OK</string>
    <string name="button_suggest_label">Suggest\nLabel</string>
    <string name="dialog_add_item_title">Add to bookmark</string>
    <string name="dialog_add_item_text">Already exists on database.</string>
    <string name="dialog_import_or_export_title">Import/Export</string>
    <string name="dialog_import_or_export_text">If you select import, it will be ignored same info that already exists in database.\nIf you select Export, old backup file in SD card will be overwritten.</string>
    <string name="dialog_import_title">Import</string>
    <string name="dialog_import_text">Import from sdcard?</string>
    <string name="dialog_remove_title">Remove item</string>
    <string name="dialog_remove_text">Do you remove selected item?</string>
    <string name="dialog_share_title">Shere: </string>
    <string name="dialog_share_from_market_title">Can\'t handle</string>
    <string name="dialog_share_from_market_text">Please share the application from Android Market!</string>
    <string name="dialog_suggest_label_empty_text">There are no label on database.</string>
    <string name="dialog_suggest_label_title">Suggest labels from history</string>
    <string name="dialog_suggest_label_text"></string>
    <string name="filter_clear_label">Clear filter</string>
    <string name="filter_label_na">Not label-ed</string>
    <string name="filter_title">Select label</string>
    <string name="menu_edit_item">Edit item</string>
    <string name="menu_filter_item">Filter by label</string>
    <string name="menu_import_export">Import/Export</string>
    <string name="menu_remove_item">Remove item</string>
    <string name="menu_share_item">Share item</string>
    <string name="menu_sort_item">Sort item</string>
    <string name="checkbox_null_text"></string>
    <string name="progress_app_name_body">Getting the application name..</string>
    <string name="progress_app_name_title">Connecting</string>
    <string name="progress_export_body">Exporting..</string>
    <string name="progress_export_title">Export</string>
    <string name="progress_import_body">Importing..</string>
    <string name="progress_import_title">Import</string>
    <string-array name="sort_order">
        <item>Default</item>
        <item>App name</item>
        <item>App name(reverse)</item>
        <item>Package name</item>
        <item>Package name(reverse)</item>
    </string-array>
    <string name="sort_title">Select sort order</string>
    <string name="toast_added_item"> was added to the bookmark!</string>
    <string name="toast_copied_to_clipboard"> was copied to clipboard.</string>
    <string name="toast_edited_item"> was edited!</string>
    <string name="toast_export_xml_fail">Failed to export! Please check your SD card is mounted.</string>
    <string name="toast_export_xml_success">Export done!</string>
    <string name="toast_import_xml_fail">Failed to import! Please check your SD card is mounted or backup file exists at "/SDCARD/MarketBookmark/bookmarks.xml".</string>
    <string name="toast_import_xml_success">Import done!</string>
    <string name="toast_many_item_is_checked">Can\'t select multiple items.</string>
    <string name="toast_no_item_in_list">No items in the bookmark! Search the application via Market, and select "Market Bookmark" by doing "share". Market Bookmark will exit.</string>
    <string name="toast_no_item_is_checked">Please mark the checkbox before you perform it.</string>
    <string name="text_app_name">App name:</string>
    <string name="text_label">Label:</string>
    <string name="text_pkg_name">Package name:</string>
    <string name="text_market_url">Market URL:</string>
</resources>
