<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/editElementSummaryScrollView"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <LinearLayout
            android:id="@+id/editElementSummaryLayout"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/editElementTextAppName"
                android:text="@string/text_app_name"
                android:textSize="10pt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp">
            </TextView>
            <EditText
                android:id="@+id/editElementEditTextAppName"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:inputType="text">
            </EditText>
            <TextView
                android:id="@+id/editElementTextUrl"
                android:text="@string/text_market_url"
                android:textSize="10pt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp">
            </TextView>
            <LinearLayout
                android:id="@+id/editElementUrlLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false" >
                <TextView
                    android:id="@+id/editElementTextUrlBody"
                    android:text="TextView"
                    android:textSize="8pt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1">
                </TextView>
                <Button
                    android:id="@+id/editElementUrlCopyButton"
                    android:text="@string/button_copy_url"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/editElementLabelLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false" >
	            <TextView
	                android:id="@+id/editElementTextLabel"
	                android:text="@string/text_label"
	                android:textSize="10pt"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
                    android:layout_gravity="center"
	                android:layout_marginTop="10sp"
	                android:layout_marginBottom="10sp"
	                android:layout_weight="1">
                </TextView>
                <Button
                    android:id="@+id/editElementSuggestLabelButton"
                    android:text="@string/button_suggest_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp">
                </Button>
            </LinearLayout>
            <EditText
                android:id="@+id/editElementEditTextLabel"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:inputType="text">
                <requestFocus></requestFocus>
            </EditText>
            <TextView
                android:id="@+id/editElementTextPkg"
                android:text="@string/text_pkg_name"
                android:textSize="10pt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp">
            </TextView>
            <TextView
                android:id="@+id/editElementTextPkgName"
                android:text="TextView"
                android:textSize="8pt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginBottom="10sp">
            </TextView>
            <Button
                android:id="@+id/editElementButton"
                android:text="@string/button_edit_bookmark"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp">
            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
