<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/marketLinkSummaryScrollView"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <LinearLayout
            android:id="@+id/marketLinkSummaryLayout"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/marketLinkTextAppName"
                android:textSize="12pt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp" android:text="@string/text_app_name">
            </TextView>
            <EditText
                android:id="@+id/marketLinkEditTextAppName"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">
            </EditText>
            <TextView
                android:id="@+id/marketLinkTextPkg"
                android:textSize="10pt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp" android:text="@string/text_pkg_name">
            </TextView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:textSize="10pt" android:layout_marginTop="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:id="@+id/marketLinkTextPkgName"></TextView>
            <TextView
                android:id="@+id/marketLinkTextUrl"
                android:textSize="9pt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp" android:text="@string/text_market_url">
            </TextView>
            <EditText
                android:id="@+id/marketLinkEditTextUrl"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">
            </EditText>
            <Button
                android:id="@+id/marketLinkAddButton"
                android:text="@string/button_add_bookmark"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">
            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
